--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="friend_address">地址：</string>
     <string name="friend_date">日期：</string>
     <string name="social">社交</string>
+    <string name="friend">friend</string>
 </resources>
