--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="friend_date">日期：</string>
     <string name="social">社交</string>
     <string name="friend">friend</string>
+    <string name="tip_empty_msg">不能发送空消息！</string>
 </resources>
