--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,6 @@
     <string name="login">Login</string>
     <string name="sign_up">Sign up</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="self">自己</string>
     <string name="routine">日常</string>
     <string name="friends">朋友</string>
@@ -16,16 +14,15 @@
     <string name="friend_account">账号：</string>
     <string name="friend_address">地址：</string>
     <string name="friend_date">日期：</string>
-    <string name="social">社交</string>
     <string name="friend">friend</string>
     <string name="tip_empty_msg">不能发送空消息！</string>
-    <string name="active_zoom">活动空间</string>
-    <string name="translate">翻译</string>
-    <string name="bank_address">银行卡归属地</string>
-    <string name="certificates">证件识别</string>
-    <string name="scenic_spot">全国景点</string>
-    <string name="bus_route">公交线路</string>
-    <string name="food_menu">菜谱大全</string>
-    <string name="express">快递查询</string>
-    <string name="weather">天气</string>
+    <string name="routine_active_zoom">活动空间</string>
+    <string name="routine_translate">翻译</string>
+    <string name="routine_credit_card_address">银行卡归属地</string>
+    <string name="routine_certificates">证件识别</string>
+    <string name="routine_scenic_spot">全国景点</string>
+    <string name="routine_bus_route">公交线路</string>
+    <string name="routine_food_menu">菜谱大全</string>
+    <string name="routine_express">快递查询</string>
+    <string name="routine_weather">天气</string>
 </resources>
