--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_account">请输入手机号码</string>
+    <string name="hint_verification_code">请输入验证码</string>
+    <string name="hint_password">请输入密码</string>
+    <string name="hint_confirm_password">请再次输入密码</string>
+    <string name="signup">注册</string>
+    <string name="apply_account">申请账号</string>
+    <string name="next_step">下一步</string>
+    <string name="commit_data">提交信息</string>
+    <string name="confirm">确定</string>
+    
+    <string name="app_key">222286c4a82a4</string>
+    <string name="app_secret">fe79cb01da7800fc3439ea8d07b50a25</string>
 </resources>
