update sign up module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Simple Chat</string>
 
-    <string name="account">账号</string>
-    <string name="password">密码</string>
     <string name="no_account_goto_sign_up"><![CDATA[没有账号？ >>去注册]]></string>
     <string name="login">Login</string>
     <string name="sign_up">Sign up</string>
@@ -40,4 +38,10 @@
     
     <string name="app_key">222286c4a82a4</string>
     <string name="app_secret">fe79cb01da7800fc3439ea8d07b50a25</string>
+    <string name="account">账号</string>
+    <string name="verification_code">验证码</string>
+    <string name="password">密码</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="re_get">重获(s)</string>
+    <string name="get_verification_code">获取验证码</string>
 </resources>
