--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="login_now">马上登录</string>
     <string name="forget_password_and_find"><![CDATA[忘记密码？ >>去找回]]></string>
     <string name="verification_type">验证方式</string>
+    <string name="male">男士</string>
+    <string name="female">女士</string>
 </resources>
