群聊功能还未完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="female">女士</string>
     <string name="yes">是</string>
     <string name="no">否</string>
+    <string name="routine_group_chat">群聊</string>
 </resources>
