--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="friend">friend</string>
     <string name="tip_empty_msg">不能发送空消息！</string>
     <string name="routine_active_zoom">活动空间</string>
+    <string name="system_msg">系统消息</string>
     <string name="routine_translate">翻译</string>
     <string name="routine_credit_card_address">银行卡归属地</string>
     <string name="routine_certificates">证件识别</string>
